# virgil-crypto-c

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  Jenkinsfile  LICENSE  Package.swift  README.md  TODO.md  VERSION  VSCCrypto-Carthage.json  VSCCrypto.podspec  VirgilCryptoFoundation.podspec  VirgilCryptoPythia.podspec  VirgilCryptoRatchet.podspec  codegen.sh  docgen.sh  project.sublime-project  set_version.sh  virgil-crypto-c.sublime-project  vsce_const.c  vsce_const.h
benchmark/: CMakeLists.txt
benchmarks/benchmark/: CMakeLists.txt
benchmarks/benchmark/include/: benchmark.h
benchmarks/benchmark/src/: benchmark.c
benchmarks/data/: CMakeLists.txt
benchmarks/data/include/: bench_data_kdf1.h  bench_data_kdf2.h  bench_data_sha224.h  bench_data_sha256.h  bench_data_sha384.h  bench_data_sha512.h  bench_data_types.h
benchmarks/data/src/: bench_data_kdf1.c  bench_data_kdf2.c  bench_data_sha224.c  bench_data_sha256.c  bench_data_sha384.c  bench_data_sha512.c
benchmarks/foundation/: CMakeLists.txt  benchmark_hash.cpp  benchmark_kem.cpp  benchmark_key.cpp  benchmark_padding.cpp  benchmark_recipient_cipher.cpp  benchmark_refcnt.cpp  benchmark_sha512.cpp  benchmark_sha512_refcnt.cpp  benchmark_signer.cpp  benchmark_signer_verifier.cpp  benchmark_verifier.cpp
benchmarks/foundation/data/: CMakeLists.txt  benchmark_data.c  benchmark_data.h
proof-of-concept/: CMakeLists.txt
proof-of-concept/cmake/: virgil_depends.cmake  virgil_depends_local.cmake
proof-of-concept/donor/: asn1_reader.c  asn1_writer.c  content.c  content_info.c  encrypted_content.c  vsf_common.h  vsf_list.c  vsf_log.h
proof-of-concept/include/: vsf.h  vsf_api.h  vsf_api_info.h  vsf_assert.h  vsf_buffer.h  vsf_buffer_api.h  vsf_hash.h  vsf_hash_api.h  vsf_impl.h  vsf_impl_info.h  vsf_library.h  vsf_memory.h  vsf_sha256.h
proof-of-concept/include/virgil/: vsf_api.h  vsf_asn1_rd.h  vsf_asn1_rd_asn1_reader.h  vsf_asn1_reader.h  vsf_asn1_wr.h  vsf_asn1_wr_asn1_writer.h  vsf_asn1_writer.h  vsf_assert.h  vsf_cms.h  vsf_content.h  vsf_content_cms.h  vsf_content_info.h  vsf_content_info_cms.h  vsf_dynamic_list.h  vsf_dynamic_list_list.h  vsf_encrypted_content.h  vsf_encrypted_content_cms.h  vsf_enveloped_data.h  vsf_enveloped_data_cms.h  vsf_hash.h  vsf_hash_info.h  vsf_hash_stream.h  vsf_impl.h  vsf_kdf.h  vsf_kdf1.h  vsf_kdf1_kdf.h  vsf_key_trans_recipient.h  vsf_key_trans_recipient_cms.h  vsf_library.h  vsf_list.h  vsf_password_recipient.h  vsf_password_recipient_cms.h  vsf_sha256.h  vsf_sha256_hash.h  vsf_sha256_hash_info.h  vsf_sha256_hash_stream.h
proof-of-concept/libs_ext/mbedtls/: mbedtls.cmake
proof-of-concept/src/: main.c  vsf_assert.c  vsf_buffer.c  vsf_hash.c  vsf_impl.c  vsf_memory.c  vsf_sha256.c
proof-of-concept/test/: CMakeLists.txt  acutest.h  cms.c  cms.h  gen-test-data.sh  list.c  list.h  main.c  test-data.c  test-data.h
tests/benchmark/sha512_benchmark/: CMakeLists.txt
tests/benchmark/sha512_picobenchmark/: CMakeLists.txt
tests/data/: CMakeLists.txt
tests/data/include/: test_data_aes_256_gcm.h  test_data_kdf1.h  test_data_kdf2.h  test_data_sha224.h
tests/data/src/: test_data_aes_256_gcm.c  test_data_hkdf.c  test_data_kdf1.c  test_data_kdf2.c  test_data_sha224.c  test_data_sha256.c  test_data_sha384.c  test_data_sha512.c
tests/foundation/: CMakeLists.txt  functional_test_recipient_cipher.c  test_aes256_cbc.c  test_aes256_gcm.c  test_alg_info_der_deserializer.c  test_alg_info_der_ser_deser.c  test_alg_info_der_serializer.c  test_asn1rd.c  test_asn1wr.c  test_base64.c  test_brainkey.c  test_brainkey_client.c  test_brainkey_server.c  test_chained_key_alg.c  test_compound_key_alg.c  test_ctr_drbg.c  test_curve25519_private_key.c  test_curve25519_public_key.c  test_ecies.c  test_ecies_envelope.c  test_ed25519_private_key.c  test_ed25519_public_key.c  test_entropy_accumulator.c  test_falcon.c  test_group_message.c  test_group_session.c  test_hash.c  test_hash_info.c  test_hash_stream.c  test_hkdf.c  test_hmac.c  test_hmac224.c  test_hmac256.c  test_hmac384.c  test_hmac512.c  test_hybrid_key_alg.c  test_kdf1.c  test_kdf2.c  test_key_asn1_deserializer.c  test_key_default_deserializer.c  (+45 more)
tests/foundation/data/: CMakeLists.txt
tests/fuzzy/: CMakeLists.txt  README.md
tests/fuzzy/comm_kit/: CMakeLists.txt
tests/fuzzy/foundation/: CMakeLists.txt
tests/fuzzy/helpers/: CMakeLists.txt
tests/fuzzy/src/: README.md  key_asn1_deserializer_private_key_fuzzy.c  key_asn1_deserializer_public_key_fuzzy.c  key_provider_test_fuzzy.c  pkcs8_test_fuzzy.c  recipient_cipher_fuzzy.c
tests/integration/: CMakeLists.txt  env.json.enc  test_brainkey_service.c  test_cards_service.c  test_comm_kit_messenger.c  test_comm_kit_messenger_auth.c  test_comm_kit_messenger_cloud_fs.c  test_comm_kit_messenger_cloud_fs_client.c  test_comm_kit_messenger_vhost.c  test_comm_kit_utils.c  test_comm_kit_utils.h  test_keyknox_service.c  test_sdk_utils.h  test_virgil_http_client.c
tests/integration/test_env/: CMakeLists.txt  test_env.c  test_env.h
tests/ratchet/: CMakeLists.txt  msg_channel.c  msg_channel.h  privateAPI.h  test_olm_message.c  test_ratchet.c  test_ratchet_cipher.c  test_ratchet_group_message.c  test_ratchet_group_session_change_members.c  test_ratchet_group_session_integration.c  test_ratchet_group_session_integration_serialization.c  test_ratchet_key_extractor.c  test_ratchet_key_utils.c  test_ratchet_keys.c  test_ratchet_message.c  test_ratchet_prekey_message.c  test_ratchet_receiver_chains.c  test_ratchet_regular_message.c  test_ratchet_session.c  test_ratchet_session_integration.c  test_ratchet_session_serialization.c  test_ratchet_skipped_group_messages.c  test_ratchet_skipped_messages.c  test_ratchet_x3dh.c  test_ratchet_xxdh.c  test_utils_ratchet.c  test_utils_ratchet.h  unreliable_msg_producer.c  unreliable_msg_producer.h
tests/ratchet/data/: CMakeLists.txt
tests/unity/: CMakeLists.txt
wrappers/csharp/: .gitignore  CMakeLists.txt
wrappers/java/: .gitignore  CMakeLists.txt  README.md  pom.xml
wrappers/php/: .gitignore  CMakeLists.txt  php_codegen.sh
(+3320 files in other folders)
